# rust-fundamentals

./: Cargo.toml  README.md  expenses.json
01-rust-fundamentals/: README-LEARN.md  README.md  expenses.csv
01-rust-fundamentals/src/: expense.rs
02-ownership-types-traits/: Cargo.toml  README-LEARN.md  README.md
02-ownership-types-traits/examples/: door_demo.rs  traffic_light_demo.rs
02-ownership-types-traits/src/: door.rs  lib.rs  observer.rs  traffic_light.rs
02-ownership-types-traits/tests/: integration.rs
03-error-handling-api-design/: Cargo.toml  README.md
03-error-handling-api-design/examples/: load_app_config.rs
03-error-handling-api-design/src/: error.rs  from_env.rs  lib.rs  loader.rs  var_name.rs
03-error-handling-api-design/tests/: integration.rs
04-concurrency/: .gitignore  Cargo.toml  README.md
04-concurrency/benches/: throughput.rs
04-concurrency/examples/: gen_log.rs
04-concurrency/src/: lib.rs  parallel.rs  parser.rs  pipeline.rs  rayon_impl.rs  sequential.rs  stats.rs
04-concurrency/tests/: integration.rs
05-async-tokio/: Cargo.toml  README-LEARN.md  README.md
05-async-tokio/benches/: scan.rs
05-async-tokio/examples/: echo_server.rs
05-async-tokio/src/: lib.rs  proxy.rs  scanner.rs  shutdown.rs  target.rs
05-async-tokio/tests/: integration.rs
06-web-services/: Cargo.toml  README-LEARN.md  README.md
06-web-services/benches/: auth.rs
06-web-services/examples/: smoke.rs
06-web-services/src/: app.rs  auth.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  models.rs  openapi.rs  validation.rs
06-web-services/tests/: integration.rs
07-systems-programming/: .gitignore  Cargo.toml  README.md
07-systems-programming/benches/: resp.rs
07-systems-programming/src/: command.rs  connection.rs  error.rs  lib.rs  persistence.rs  resp.rs  server.rs  store.rs
07-systems-programming/tests/: integration.rs
08-performance/: .gitignore  Cargo.toml  README-LEARN.md  README.md
08-performance/benches/: aggregate.rs
08-performance/examples/: alloc_profile.rs
08-performance/src/: aggregate.rs  hash.rs  io.rs  lib.rs  parse.rs  runner.rs
08-performance/tests/: integration.rs
09-unsafe-ffi/: .gitignore  Cargo.toml  README-LEARN.md  README.md  build.rs
09-unsafe-ffi/benches/: bloom.rs
09-unsafe-ffi/cbits/: fnv.c  fnv.h
09-unsafe-ffi/consumers/: consumer.c  consumer.py  run.sh
09-unsafe-ffi/include/: cbloom.h
09-unsafe-ffi/src/: bloom.rs  ffi.rs  hash.rs  lib.rs  sys.rs
09-unsafe-ffi/tests/: integration.rs
src/: expense.rs  main.rs
