[package]
name = "envtyped"
version = "0.1.1"
edition = "2021"
description = "Typed environment-variable loading with structured errors"
license = "MIT OR Apache-2.0"
# TODO: replace with your own GitHub URL before `cargo publish`.
repository = "https://github.com/gusaiani/rust-fundamentals/tree/main/03-error-handling-api-design"
keywords = ["env", "config", "12factor", "environment"]
categories = ["config"]
readme = "README.md"

[dependencies]
thiserror = "1"

[dev-dependencies]
anyhow = "1"
